[58361] chore: code review